# agentic-context-engineering

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
ace/: __init__.py  baselines.py  cli.py  config.py  delta.py  engine.py  feedback.py  llm.py  playbook.py  refine.py  roles.py  tasks.py  visualize.py
ace/integrations/: __init__.py  openai_agents.py
cookbook/: 01_first_playbook.py  02_online_adaptation.py  03_your_own_task.py  04_label_free_feedback.py  05_save_and_resume.py  06_grow_and_refine.py  07_inspect_and_report.py  08_agent_quickstart.py  09_agent_auto_learn_from_tool_errors.py  10_agent_streaming_and_sessions.py  11_extract_10k_to_csv.py  README.md
docs/: 404.html  architecture.html  architecture.md  cookbook.html  index.html  robots.txt  sitemap.xml
docs/assets/: sample_report.html
examples/: 01_quickstart.py  02_context_collapse.py  03_offline_vs_online.py  04_openai_agents.py  05_custom_task.py  README.md
tests/: test_baselines.py  test_cli.py  test_config_and_playbook_io.py  test_cookbook.py  test_delta.py  test_engine.py  test_extensibility.py  test_feedback_and_delta_edges.py  test_llm_openai.py  test_openai_agents_integration.py  test_playbook.py  test_refine.py  test_refine_embedder.py  test_roles_and_viz.py  test_tasks_and_integration.py  test_usage.py
